@@ -1,3 +1,4 @@
+2006-06-21:	PHOEBE_0.29b bugfix version released.
 2006-01-31:	PHOEBE_0.29a bugfix version released.
 2006-01-13:	PHOEBE_0.29  stable version released.
 2005-11-10:     PHOEBE_0.28a bugfix version released.
